--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:24.0.+'
     compile 'com.android.support:cardview-v7:24.2.1'
     compile 'com.google.android.gms:play-services:9.4.0'
+    compile 'com.android.volley:volley:1.0.0'
+    compile 'com.google.code.gson:gson:2.6.2'
 }
