ignore files by Sandy

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,28 @@ captures/
 .idea/.name
 .idea/encodings.xml
 .idea/vcs.xml
+.idea/libraries/accessibility_test_framework_1_0.xml
+.idea/libraries/android_android_22.xml
+.idea/libraries/ant_1_8_0.xml
+.idea/libraries/ant_launcher_1_8_0.xml
+.idea/libraries/asm_5_0_1.xml
+.idea/libraries/asm_analysis_5_0_1.xml
+.idea/libraries/asm_commons_5_0_1.xml
+.idea/libraries/asm_tree_5_0_1.xml
+.idea/libraries/asm_util_5_0_1.xml
+.idea/libraries/bcprov_jdk16_1_46.xml
+.idea/libraries/gson_2_6_2.xml
+.idea/libraries/hamcrest_core_1_1.xml
+.idea/libraries/icu4j_53_1.xml
+.idea/libraries/junit_4_10.xml
+.idea/libraries/maven_ant_tasks_2_1_3.xml
+.idea/libraries/mockito_core_1_9_5.xml
+.idea/libraries/objenesis_1_0.xml
+.idea/libraries/robolectric_3_0.xml
+.idea/libraries/robolectric_annotations_3_0.xml
+.idea/libraries/robolectric_resources_3_0.xml
+.idea/libraries/robolectric_utils_3_0.xml
+.idea/libraries/shadows_core_3_0.xml
+.idea/libraries/sqlite4java_0_282.xml
+.idea/libraries/volley_1_0_0.xml
+.idea/libraries/vtd_xml_2_11.xml
