--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,7 +54,7 @@
         </activity>
 
         <activity android:name=".PFZActivity"></activity>
-        <activity android:name=".HttpHandler" />
+        <!--<activity android:name=".HttpHandler" /> -->
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -66,14 +66,11 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
+            android:value="AIzaSyDtqwPeh5hh1bzP7LvK9-RaEs909k2vdyM" />
 
         <activity
             android:name=".MapsActivity"
-
             android:label="@string/title_activity_maps"></activity>
-            android:label="@string/title_activity_maps" />
-        <activity android:name=".PFZActivity" />
         <activity android:name=".FeedBack"></activity>
 
     </application>
