--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/icon"
@@ -52,8 +51,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".PFZActivity"></activity>
+        <activity android:name=".PFZActivity" />
         <activity android:name=".HttpHandler" />
 
         <!--
@@ -70,12 +68,11 @@
 
         <activity
             android:name=".MapsActivity"
-
-            android:label="@string/title_activity_maps"></activity>
             android:label="@string/title_activity_maps" />
+        android:label="@string/title_activity_maps" />
         <activity android:name=".PFZActivity" />
-        <activity android:name=".FeedBack"></activity>
-
+        <activity android:name=".FeedBack" />
+        <activity android:name=".BestPractices"></activity>
     </application>
 
 </manifest>
