--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/icon"
@@ -52,9 +51,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".PFZActivity" />
+        <!-- <activity android:name=".HttpHandler" /> -->
 
-        <activity android:name=".PFZActivity"></activity>
-        <!--<activity android:name=".HttpHandler" /> -->
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -62,7 +61,7 @@
              Note that the API key is linked to the encryption key used to sign the APK.
              You need a different API key for each encryption key, including the release key that is used to
              sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
+             You can define the keys for the debug and release targets in src/debug/ and src/release/.
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -70,9 +69,11 @@
 
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps"></activity>
-        <activity android:name=".FeedBack"></activity>
-
+            android:label="@string/title_activity_maps" />
+        <activity android:name=".FeedBack" />
+        <activity android:name=".InitialActivity" />
+        <activity android:name=".FishingActivity" />
+        <activity android:name=".GameActivity"></activity>
     </application>
 
 </manifest>
